fixed button spacing

--- a/array-score-sight.css
+++ b/array-score-sight.css
@@ -91,7 +91,6 @@ input {
     border-radius: .25rem;
     border: .0625rem solid #D7DEE4;
     font-size: 1.5rem;
-    padding-left: .875rem;
 }
 
 button {
@@ -103,7 +102,6 @@ button {
     color: #FFF;
     font-family: Heebo;
     font-size: 1rem;
-    /* margin-left: 1.125rem; */
 }
 
 .score-bar {
